--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-nav></app-nav>
-
+<section class="container border border-dark mt-2">
+    <router-outlet></router-outlet>
+</section>
 <app-footer></app-footer>
