--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -1,55 +1,8 @@
-<!-- Footer -->
-<footer class="page-footer font-small elegant-color-dark darken-3">
-
-    <!-- Footer Elements -->
-    <div class="container">
-
-        <!-- Grid row-->
-        <div class="row">
-
-            <!-- Grid column -->
-            <div class="col-md-12 py-5">
-                <div class="mb-5 flex-center">
-
-                    <!-- Facebook -->
-                    <a class="fb-ic">
-                        <mdb-icon fab icon="facebook" size="2x" class="white-text mr-md-5 mr-3"></mdb-icon>
-                    </a>
-                    <!-- Twitter -->
-                    <a class="tw-ic">
-                        <mdb-icon fab icon="twitter" size="2x" class="white-text mr-md-5 mr-3"></mdb-icon>
-                    </a>
-                    <!-- Google +-->
-                    <a class="gplus-ic">
-                        <mdb-icon fab fab icon="google-plus" size="2x" class="white-text mr-md-5 mr-3"></mdb-icon>
-                    </a>
-                    <!--Linkedin -->
-                    <a class="li-ic">
-                        <mdb-icon fab icon="linkedin" size="2x" class="white-text mr-md-5 mr-3"></mdb-icon>
-                    </a>
-                    <!--Instagram-->
-                    <a class="ins-ic">
-                        <mdb-icon fab icon="instagram" size="2x" class="white-text mr-md-5 mr-3"></mdb-icon>
-                    </a>
-                    <!--Pinterest-->
-                    <a class="pin-ic">
-                        <mdb-icon fab icon="pinterest" size="2x" class="white-text mr-md-5 mr-3"></mdb-icon>
-                    </a>
-                </div>
-            </div>
-            <!-- Grid column -->
-
-        </div>
-        <!-- Grid row-->
-
-    </div>
-    <!-- Footer Elements -->
-
+<footer class="bg-light text-center text-lg" style="position: fixed; bottom: 0px; width: 100%;">
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2021 Copyright:
-        <a href=""> Grzegorz Waluś</a>
+    <div class="text-center text-light p-3 elegant-color" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2021 Copyright:
+        <a class="text-light" href="">Grzegorz Waluś</a>
     </div>
     <!-- Copyright -->
-
 </footer>
-<!-- Footer -->
