--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,6 +1,5 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark elegant-color-dark ie-nav fixed-top"
-    [containerInside]="false">
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark elegant-color-dark" [containerInside]="false">
 
     <!-- Navbar brand -->
     <mdb-navbar-brand><a class="navbar-brand" href="#">Logo</a></mdb-navbar-brand>
