Add background image

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,3 +1,22 @@
-<div>
-    <h1>Welcome</h1>
+<div class="container mt-2">
+    <div class="jumbotron">
+        <h1 class="display-3">Welcome in Quizzy</h1>
+        <p class="lead">This application checks knowledge from different categories e.g.</p>
+        <ul style="list-style: square;">
+            <li>Sports</li>
+            <li>Video games</li>
+            <li>Comics</li>
+            <li>Geography</li>
+        </ul>
+        <hr class="my-4">
+        <!-- <img src="../assets/logo.png" alt="quizzy"> -->
+        <!-- <p>If you want to test your knowledge, click let's play.</p>
+        <p class="lead">
+            <a class="btn btn-secondary btn-lg" href="#" role="button">Let's play!</a>
+        </p> -->
+        <div class="col-sm-8">
+            <p class="d-inline-block">If you want to test your knowledge, click let's play.</p>
+            <button type="button" class="btn btn-secondary btn-md ml-2">Let's play!</button>
+        </div>
+    </div>
 </div>
