--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
-<section class="container border border-dark mt-2">
-    <router-outlet></router-outlet>
+<section>
+    <router-outlet id="content" style="background-image: url(../assets/background.jpg);"></router-outlet>
 </section>
 <app-footer></app-footer>
