--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -16,7 +16,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link waves-light" mdbWavesEffect>
-                    <mdb-icon fas icon="cog"></mdb-icon> Settings
+                    <mdb-icon fas icon="users"></mdb-icon>Leaderboards
                 </a>
             </li>
 
