Add get categories method in trivia service in client

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -14,9 +14,19 @@
         <p class="lead">
             <a class="btn btn-secondary btn-lg" href="#" role="button">Let's play!</a>
         </p> -->
+
+        <div class="d-flex flex-row bd-highlight mb-3">
+            <div class="p-2 bd-highlight border">Flex item 1</div>
+            <div class="p-2 bd-highlight border">Flex item 2</div>
+            <div class="p-2 bd-highlight border">Flex item 3</div>
+        </div>
+
+
         <div class="col-sm-8">
             <p class="d-inline-block">If you want to test your knowledge, click let's play.</p>
             <button type="button" class="btn btn-secondary btn-md ml-2">Let's play!</button>
         </div>
     </div>
+
+
 </div>
