--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -1,8 +1,13 @@
 <footer class="bg-light text-center text-lg" style="position: fixed; bottom: 0px; width: 100%;">
     <!-- Copyright -->
-    <div class="text-center text-light p-3 elegant-color" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2021 Copyright:
-        <a class="text-light" href="">Grzegorz Waluś</a>
+    <div class="text-center text-light p-3 elegant-color-dark">
+        <span class="mr-1" style="font-size: medium;">© 2021 Copyright:</span> 
+        <a class="text-light" href="https://github.com/gwalus" target="_blank">Grzegorz Waluś</a>
+
+        <hr class="my-2">
+        <i class="mr-2">powered by:</i>
+        <a href="https://opentdb.com" target="_blank"><img src="https://opentdb.com/images/logo.png" alt="trivia db"
+                style="height: 35px; width: auto;"></a>
     </div>
     <!-- Copyright -->
 </footer>
