--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,18 +1,18 @@
-<div class="container" style="margin: 5% auto">
+<div class="container" style="margin: 3% auto">
     <div class="jumbotron">
         <h1 class="display-3">Welcome in Quizzy</h1>
         <p class="lead">This application checks knowledge from different categories.</p>
 
         <div class="category-inline">
             <button class="flex-item btn btn-outline-{{getRandomBtnColor()}}" style="border: 2px solid;"
-                *ngFor="let category of categories">{{category}}</button>
+                *ngFor="let category of categories" (click)="chooseCategory(category.id)">{{category.name}}</button>
         </div>
 
         <hr class="my-4">
 
         <div class="col-sm-8">
             <p class="d-inline-block">If you want to test your knowledge, click let's play.</p>
-            <button type="button" class="btn btn-secondary btn-md ml-2">Let's play!</button>
+            <button type="button" class="btn btn-secondary btn-md ml-2 p-1" (click)="StartQuiz()">Let's play!</button>
         </div>
     </div>
 
