Add modal options game

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -12,7 +12,8 @@
 
         <div class="col-sm-8">
             <p class="d-inline-block">If you want to test your knowledge, click let's play.</p>
-            <button type="button" class="btn btn-secondary btn-md ml-2 p-1" (click)="startQuiz()">Let's play!</button>
+            <button type="button" class="btn btn-secondary btn-md ml-2 p-1" (click)="openModalWithGameOptions()">Let's
+                play!</button>
         </div>
     </div>
 
