--- a/client/src/app/game-options/game-options.component.html
+++ b/client/src/app/game-options/game-options.component.html
@@ -1,24 +1,49 @@
 <div class="modal-header">
-    <h3 class="modal-title">{{title}}</h3>
+    <h3 class="modal-title">{{category}}</h3>
     <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
 <div class="modal-body">
-    <h2>Category: {{category}}</h2>
+    <label for="">Numbers of questions</label>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Total</th>
+                <th scope="col">Easy</th>
+                <th scope="col">Medium</th>
+                <th scope="col">Hard</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="table">
+                <td>{{numbersOfQuestions?.total_question_count}}</td>
+                <td>{{numbersOfQuestions?.total_easy_question_count}}</td>
+                <td>{{numbersOfQuestions?.total_medium_question_count}}</td>
+                <td>{{numbersOfQuestions?.total_hard_question_count}}</td>
+            </tr>
+        </tbody>
+    </table>
 
-    <form>
-        <label>Difficult</label>
-        <select class="form-control" name="" id="">
-            <option *ngFor="let difficult of difficulty">{{difficult}}</option>
-        </select>
+    <form [formGroup]="optionsModel" (ngSubmit)="play()">
+        <div class="form-group">
+            <label>Level</label>
+            <select class="form-control" formControlName="level">
+                <option *ngFor="let difficult of difficulty">{{difficult}}</option>
+            </select>
+        </div>
 
-        <label>Number of questions</label>
-        <select class="form-control" name="" id="">
-            <option *ngFor="let number of numberOfQuestions">{{number}}</option>
-        </select>
+        <div class="form-group">
+            <label>Number of questions</label>
+            <select class="form-control" formControlName="numberOfQuestions">
+                <option *ngFor="let number of numberOfQuestions" [selected]="number == 10">{{number}}</option>
+            </select>
+        </div>
+        <div class="row">
+            <div class="text-right">
+                <button type="submit" class="btn pull-right btn-secondary btn-md">Play!</button>
+            </div>
+        </div>
+
     </form>
-</div>
-<div class="modal-footer">
-    <button type="button" class="btn btn-secondary btn-md">Play !</button>
 </div>
