Cache and loading categories in home component

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin: 3% auto">
+<div class="container" style="margin: 3% auto" *ngIf="!loading">
     <div class="jumbotron">
         <h1 class="display-3">Welcome in Quizzy</h1>
         <p class="lead">This application checks knowledge from different categories.</p>
