--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,5 +1,6 @@
 #content {
-    position: absolute;
+    background-image: url(../assets/background.jpg);
+    position: fixed;
           top: 0px;
           left: 0px;
           width: 100%;
