--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
 <section>
-    <router-outlet id="content" style="background-image: url(../assets/background.jpg);"></router-outlet>
+    <router-outlet id="content"></router-outlet>
+    <app-footer></app-footer>
 </section>
-<app-footer></app-footer>
