Update question model in client

--- a/client/src/app/game/game.component.html
+++ b/client/src/app/game/game.component.html
@@ -1,7 +1,7 @@
 <div class="container" style="margin: 3% auto">
     <div class="jumbotron">
         <!-- <h1 class="display-3">Welcome in Quizzy</h1> -->
-        <p class="lead wrap">{{currentQuestion.question}}</p>
+        <p class="lead wrap">{{currentQuestion?.question}}</p>
         <hr class="my-4">
 
         <div class="row">
