Set current answers

--- a/client/src/app/game/game.component.html
+++ b/client/src/app/game/game.component.html
@@ -15,7 +15,7 @@
                     <div class="card-header">Answer 1</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
-                        <p class="card-text">{{currentQuestion}}</p>
+                        <!-- <p class="card-text">{{currentQuestion?.}}</p> -->
 
                     </div>
                 </div>
@@ -25,7 +25,7 @@
                     <div class="card-header">Answer 2</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
-                        <p class="card-text">{{currentQuestion}}</p>
+                        <!-- <p class="card-text">{{currentQuestion}}</p> -->
                     </div>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                     <div class="card-header">Answer 3</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
-                        <p class="card-text">{{currentQuestion}}</p>
+                        <!-- <p class="card-text">{{currentQuestion}}</p> -->
                     </div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                     <div class="card-header">Answer 4</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
-                        <p class="card-text">{{currentQuestion}}</p>
+                        <!-- <p class="card-text">{{currentQuestion}}</p> -->
                     </div>
                 </div>
             </div>
