Add answers hover card effect

--- a/client/src/app/game/game.component.html
+++ b/client/src/app/game/game.component.html
@@ -2,12 +2,11 @@
     <div class="jumbotron">
         <div class="row text-right">
             <h3 class="display-5">{{currentQuestion?.category}}</h3>
-            <p>{{currentQuestion?.difficulty}}</p>
+            <p class="font-italic">{{currentQuestion?.difficulty}}</p>
         </div>
 
-
-        <p class="lead wrap">{{currentQuestion?.question}}</p>
-        <hr class="my-4">
+        <hr class="my-2">
+        <p class="lead wrap mb-4">{{currentQuestion?.question}}</p>
 
         <div class="row">
             <div class="col">
