--- a/client/src/app/game/game.component.html
+++ b/client/src/app/game/game.component.html
@@ -10,7 +10,8 @@
 
         <div class="row">
             <div class="col">
-                <div class="card border-dark mb-3" style="max-width: 20rem;">
+                <div class="card border-{{answerColorDisplay[0]}} mb-3" style="max-width: 20rem;"
+                    (click)="checkAnswer(currentAnswers[0], 0)">
                     <div class="card-header">Answer</div>
                     <div class="card-body">
                         <h4 class="card-title">{{currentAnswers && currentAnswers[0]?.toString()}}</h4>
@@ -18,7 +19,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card border-dark mb-3" style="max-width: 20rem;">
+                <div class="card border-{{answerColorDisplay[1]}} mb-3" style="max-width: 20rem;"
+                    (click)="checkAnswer(currentAnswers[1], 1)">
                     <div class="card-header">Answer 2</div>
                     <div class="card-body">
                         <h4 class="card-title">{{currentAnswers && currentAnswers[1]?.toString()}}</h4>
@@ -26,7 +28,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card border-dark mb-3" style="max-width: 20rem;">
+                <div class="card border-{{answerColorDisplay[2]}} mb-3" style="max-width: 20rem;"
+                    (click)="checkAnswer(currentAnswers[2], 2)">
                     <div class="card-header">Answer 3</div>
                     <div class="card-body">
                         <h4 class="card-title">{{currentAnswers && currentAnswers[2]?.toString()}}</h4>
@@ -35,7 +38,8 @@
             </div>
 
             <div class="col">
-                <div class="card border-dark mb-3" style="max-width: 20rem;">
+                <div class="card border-{{answerColorDisplay[3]}} mb-3" style="max-width: 20rem;"
+                    (click)="checkAnswer(currentAnswers[3], 3)">
                     <div class="card-header">Answer 4</div>
                     <div class="card-body">
                         <h4 class="card-title">{{currentAnswers && currentAnswers[3]?.toString()}}</h4>
