--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -22,7 +22,7 @@
 
             <form *ngIf="(authService.currentUser$ | async) === null" #loginForm="ngForm"
                 class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off">
-                <input name="username" [(ngModel)]="model.username" class="form-control mr-sm-2" type="text"
+                <input name="username" [(ngModel)]="model.email" class="form-control mr-sm-2" type="text"
                     placeholder="Login">
                 <input name="password" [(ngModel)]="model.password" class="form-control mr-sm-2" type="password"
                     placeholder="Password">
