--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -9,9 +9,9 @@
 
         <!-- Links -->
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link waves-light" mdbWavesEffect>
-                    <mdb-icon fas icon="envelope"></mdb-icon> Contact<span class="sr-only">(current)</span>
+                    <button class="fas fa-users-cog"></button> Admin panel
                 </a>
             </li>
             <li class="nav-item">
@@ -38,7 +38,7 @@
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                     <ng-container>
                         <a class="dropdown-item waves-light" mdbWavesEffect href="#">My account</a>
-                        <a class="dropdown-item waves-light" mdbWavesEffect href="#">Log out</a>
+                        <a class="dropdown-item waves-light" mdbWavesEffect (click)="logout()">Log out</a>
                     </ng-container>
                 </div>
             </li>
