--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -9,9 +9,9 @@
 
         <!-- Links -->
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
+            <li class="nav-item" *appHasRole='["Admin", "Moderator"]'>
                 <a class="nav-link waves-light" mdbWavesEffect>
-                    <button class="fas fa-users-cog"></button> Admin panel
+                    <button class="fas fa-users-cog" routerLink="/admin"></button> Admin panel
                 </a>
             </li>
             <li class="nav-item">
