Display default admin panel

--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,1 +1,36 @@
-<p>admin works!</p>
+<div class="container" style="margin: 3% auto;">
+
+    <div class="jumbotron">
+        <h1 class="display-5">Admin panel</h1>
+
+        <hr class="my-4">
+
+        <div>
+            <tabset>
+                <tab heading="Add category">
+                    <form class="mt-2">
+
+                        <input type="text" class="form-control-inline mr-2" placeholder="Category">
+                        <button class="btn btn-secondary">Add</button>
+
+                    </form>
+                </tab>
+                <tab heading="Add questions">
+                    <form class="mt-2">
+                        <select class="form-control">
+                            <option value="Sports">Sports</option>
+                            <option value="Games">Games</option>
+                        </select>
+                        <input type="text" class="form-control mr-2" placeholder="Question">
+                        <input type="text" class="form-control mr-2" placeholder="Answer">
+                        <input type="text" class="form-control mr-2" placeholder="Answer">
+                        <input type="text" class="form-control mr-2" placeholder="Answer">
+                        <input type="text" class="form-control mr-2" placeholder="Correct Answer">
+                        <button class="btn btn-secondary">Add</button>
+
+                    </form>
+                </tab>
+            </tabset>
+        </div>
+    </div>
+</div>
