--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -8,10 +8,12 @@
         <div>
             <tabset>
                 <tab heading="Add category">
-                    <form class="mt-2">
-
-                        <input type="text" class="form-control-inline mr-2" placeholder="Category">
-                        <button class="btn btn-secondary">Add</button>
+                    <form class="mt-2" [formGroup]="categoryForm" style="padding: 10px 0">
+                        <label class="mr-2">Category name: </label>
+                        <input type="text" class="form-control-inline mr-2" placeholder="Category"
+                            formControlName="category">
+                        <button class="btn btn-secondary" type="submit" (click)="AddCategory()"
+                            [disabled]="!categoryForm.valid">Add</button>
 
                     </form>
                 </tab>
