Handle adding category to form

--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -12,7 +12,7 @@
                         <label class="mr-2">Category name: </label>
                         <input type="text" class="form-control-inline mr-2" placeholder="Category"
                             formControlName="category">
-                        <button class="btn btn-secondary" type="submit" (click)="AddCategory()"
+                        <button class="btn btn-secondary" type="submit" (click)="addCategory()"
                             [disabled]="!categoryForm.valid">Add</button>
 
                     </form>
