Handling adding new question from admin form

--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -18,19 +18,40 @@
                     </form>
                 </tab>
                 <tab heading="Add questions">
-                    <form class="mt-2">
-                        <select class="form-control">
-                            <option value="Sports">Sports</option>
-                            <option value="Games">Games</option>
-                        </select>
-                        <input type="text" class="form-control mr-2" placeholder="Question">
-                        <input type="text" class="form-control mr-2" placeholder="Answer">
-                        <input type="text" class="form-control mr-2" placeholder="Answer">
-                        <input type="text" class="form-control mr-2" placeholder="Answer">
-                        <input type="text" class="form-control mr-2" placeholder="Correct Answer">
-                        <button class="btn btn-secondary">Add</button>
+                    <form [formGroup]="questionForm" (ngSubmit)="addQuestion()">
+                        <label class="mt-2">Category:</label>
+                        <input formControlName="name" class="form-control" placeholder="Category" />
+
+                        <label class="mt-2">Question</label>
+                        <input type="text" class="form-control" placeholder="Question" formControlName="question">
+
+                        <label class="mt-2">Correct answer:</label>
+                        <input type="text" class="form-control" placeholder="Correct answer"
+                            formControlName="correctAnswer">
+
+                        <div formArrayName="incorrectAnswers">
+                            <div *ngFor="let item of answers.controls; let pointIndex=index"
+                                [formGroupName]="pointIndex">
+
+                                <label class="mr-2">Incorrect answers</label>
+                                <input type="text" class="form-control mr-2" placeholder="answer"
+                                    formControlName="answer" />
+
+                                <button type="button" class="btn btn-outline-danger m-2"
+                                    (click)="deleteIncorrectAnswer(pointIndex)">X</button>
+
+                            </div>
+                            <button type="button" class="btn btn-outline-success"
+                                (click)="addIncorrectAnswer()">Add</button>
+                        </div>
+
+                        <div class="float-sm-right">
+                            <button type="submit" class="btn btn-outline-secondary">Add question</button>
+                        </div>
 
                     </form>
+
+                    {{ this.questionForm.value | json }}
                 </tab>
             </tabset>
         </div>
