--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,22 +1,36 @@
-<div class="container" style="margin: 3% auto;" *ngIf="!loading">
+<div class="container" style="margin: 1% auto;" *ngIf="!loading">
     <div class="progress">
         <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" role="progressbar"
             aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
     </div>
-    <div class="jumbotron">
+    <div class="jumbotron" style="padding: 2% 4%;">
         <h1 class="display-3">Welcome in Quizzy</h1>
         <p class="lead">This application checks knowledge from different categories.</p>
+        <hr class="my-2">
 
         <div class="category-inline">
-            <button class="flex-item btn btn-outline-{{getRandomBtnColor(category.id)}}" style="border: 2px solid;"
-                *ngFor="let category of categories" (click)="chooseCategory(category.id)">{{category.name}}</button>
+            <button class="flex-item btn btn-outline-{{getRandomBtnColor(i)}}" style="border: 2px solid;"
+                *ngFor="let category of categories; let i = index;"
+                (click)="chooseCategory(category.id)">{{category.name}}</button>
         </div>
 
-        <hr class="my-4">
 
-        <div class="col-sm-8 ">
-            <p class="d-inline-block">If you want to test your knowledge, click let's play.</p>
-            <button type="button" class="btn btn-secondary btn-md ml-2 p-1" (click)="openModalWithGameOptions()">Let's
+        <div class="text-center m-3 h3">
+            <p class="d-inline-block ">If you want to test your knowledge, click let's play.</p>
+            <button type="button" class="btn btn-secondary btn-md ml-2 p-2" (click)="openModalWithGameOptions()">Let's
+                play!</button>
+        </div>
+        <hr class="my-2">
+
+        <div class="category-inline">
+            <button class="flex-item btn btn-outline-{{getRandomBtnColor(i)}}" style="border: 2px solid;"
+                *ngFor="let category of categoriesFromDatabase; let i = index;"
+                (click)="chooseCategoryFromDatabase(category)">{{category}}</button>
+        </div>
+
+        <div class="text-center m-3 h3">
+            <p class="d-inline-block">Try it with custom categories</p>
+            <button type="button" class="btn btn-secondary btn-md ml-2 p-2" (click)="startWithCustomCategory()">Let's
                 play!</button>
         </div>
     </div>
