Reset latest migration

--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-light text-center text-lg" style="position: relative; bottom: 0; width: 100%;">
+<footer class="bg-light text-center text-lg" style="position: fixed; bottom: 0; width: 100%;">
     <!-- Copyright -->
     <div class="text-center text-light p-3 elegant-color-dark">
         <span class="mr-1" style="font-size: medium;">© 2021 Copyright:</span>
