Fix footer displaying

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-nav></app-nav>
 <section>    
     <router-outlet id="content"></router-outlet>
+    <div class="clear"></div>
     <app-footer></app-footer>
 </section>
