--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -20,3 +20,5 @@
           background-position: center;
           background-color: rgba(0, 0, 0, 0.5);
 }
+
+.clear { clear: both; height: 100px; }
