Fix container width for bootswatch sketchy jumbotron display

--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -1,8 +1,18 @@
-<footer class="bg-light text-center text-lg" style="position: fixed; bottom: 0; width: 100%;">
+<footer class="navbar-expand-lg navbar-dark bg-primary text-center text-lg"
+    style="position: fixed; bottom: 0; width: 100%;">
     <!-- Copyright -->
     <div class="text-center text-light p-3 elegant-color-dark">
-        <span class="mr-1" style="font-size: medium;">© 2021 Copyright:</span>
-        <a class="text-light" href="https://github.com/gwalus" target="_blank">Grzegorz Waluś</a>
+        <span class="mr-1" style="font-size: medium;">© 2021 Copyright: Grzegorz Waluś</span>
+
+        <div>
+            <span class="d-inline-block">
+                <i class="fab fa-github mr-1"></i>
+            </span>
+            <span class="d-inline-block">
+                <a class="text-light" href="https://github.com/gwalus/Quizzy_v2" target="_blank"> Github</a>
+            </span>
+
+        </div>
 
         <hr class="my-2">
         <i class="mr-2">powered by:</i>
