--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,54 +1,41 @@
-<!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark elegant-color-dark" [containerInside]="false">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" routerLink="">Quizzy</a>
 
-    <!-- Navbar brand -->
-    <mdb-navbar-brand><a class="navbar-brand" href="#">Logo</a></mdb-navbar-brand>
+    <ul class="navbar-nav ml-auto">
+        <form *ngIf="(authService.currentUser$ | async) === null" #loginForm="ngForm" class="form-inline mt-2 mt-md-0"
+            (ngSubmit)="login()" autocomplete="off">
+            <input name="username" [(ngModel)]="model.email" class="form-control mr-sm-2" type="text"
+                placeholder="Login">
+            <input name="password" [(ngModel)]="model.password" class="form-control mr-sm-2" type="password"
+                placeholder="Password">
+            <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+        </form>
 
-    <!-- Collapsible content -->
-    <links>
-
-        <!-- Links -->
-        <ul class="navbar-nav ml-auto">
-            <form *ngIf="(authService.currentUser$ | async) === null" #loginForm="ngForm"
-                class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off">
-                <input name="username" [(ngModel)]="model.email" class="form-control mr-sm-2" type="text"
-                    placeholder="Login">
-                <input name="password" [(ngModel)]="model.password" class="form-control mr-sm-2" type="password"
-                    placeholder="Password">
-                <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
-            </form>
-
-            <ng-container *ngIf="authService.currentUser$ | async">
-                <li class="nav-item" *appHasRole='["Admin", "Moderator"]'>
-                    <a class="nav-link waves-light" routerLink="/admin" mdbWavesEffect>
-                        <button class="fas fa-users-cog"></button> Admin panel
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link waves-light" mdbWavesEffect>
-                        <mdb-icon fas icon="users"></mdb-icon>Leaderboards
-                    </a>
-                </li>
-            </ng-container>
-
-            <!-- Dropdown -->
-            <li class="nav-item dropdown" dropdown *ngIf="(authService.currentUser$ | async) !== null">
-                <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light"
-                    mdbWavesEffect>
-                    <mdb-icon fas icon="user"></mdb-icon> Profile<span class="caret"></span>
+        <ng-container *ngIf="authService.currentUser$ | async">
+            <li class="nav-item" *appHasRole='["Admin", "Moderator"]'>
+                <a class="nav-link " routerLink="/admin">
+                    <button class="fas fa-users-cog"></button> Admin panel
                 </a>
-                <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
-                    <ng-container>
-                        <a class="dropdown-item waves-light" mdbWavesEffect href="#">My account</a>
-                        <a class="dropdown-item waves-light" mdbWavesEffect (click)="logout()">Log out</a>
-                    </ng-container>
-                </div>
             </li>
+            <li class="nav-item">
+                <a class="nav-link">
+                    <mdb-icon fas icon="users"></mdb-icon> Leaderboards
+                </a>
+            </li>
+        </ng-container>
 
-        </ul>
-        <!-- Links -->
-    </links>
-    <!-- Collapsible content -->
+        <!-- Dropdown -->
+        <li class="nav-item dropdown" dropdown *ngIf="(authService.currentUser$ | async) !== null">
+            <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
+                <mdb-icon fas icon="user"></mdb-icon> Profile<span class="caret"></span>
+            </a>
+            <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
+                <ng-container>
+                    <a class="dropdown-item waves-light" mdbWavesEffect href="#">My account</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect (click)="logout()">Log out</a>
+                </ng-container>
+            </div>
+        </li>
 
-</mdb-navbar>
-<!--/.Navbar-->
+    </ul>
+</nav>
