--- a/client/src/app/custom-game/custom-game.component.html
+++ b/client/src/app/custom-game/custom-game.component.html
@@ -1,1 +1,25 @@
-<p>custom-game works!</p>
+<div class="container" style="margin: 3% auto">
+    <div class="jumbotron" style="padding: 1rem 4rem 2rem 4rem">
+        <div class="mt-0">
+            <div class="row text-right">
+                <h3 class="display-5">{{currentQuestion?.category}}</h3>
+            </div>
+
+            <div class="row text-left">
+                <span class="h3">Question</span>
+            </div>
+
+            <hr class="my-2">
+            <p class="lead wrap mb-4">{{currentQuestion?.question}}</p>
+
+            <ng-container *ngFor="let answer of currentQuestion.answers">
+                <div class="row col-sm mb-1">
+                    <div class="card">
+                        <div class="card-body">
+                            {{answer}}
+                        </div>
+                    </div>
+                </div>
+            </ng-container>
+        </div>
+    </div>
