--- a/client/src/app/custom-game/custom-game.component.html
+++ b/client/src/app/custom-game/custom-game.component.html
@@ -12,7 +12,7 @@
             <hr class="my-2">
             <p class="lead wrap mb-4">{{currentQuestion?.question}}</p>
 
-            <ng-container *ngFor="let answer of currentQuestion.answers">
+            <ng-container *ngFor="let answer of currentQuestion?.answers">
                 <div class="row col-sm mb-1">
                     <div class="card">
                         <div class="card-body">
