--- a/client/src/app/custom-game/custom-game.component.html
+++ b/client/src/app/custom-game/custom-game.component.html
@@ -12,14 +12,16 @@
             <hr class="my-2">
             <p class="lead wrap mb-4">{{currentQuestion?.question}}</p>
 
-            <ng-container *ngFor="let answer of currentQuestion?.answers">
-                <div class="row col-sm mb-1">
-                    <div class="card">
-                        <div class="card-body">
+
+            <div class="row">
+                <div class="col" *ngFor="let answer of currentQuestion?.answers; let i = index">
+                    <div class="card border-{{answerColorDisplay[i]}} mb-3" style="max-width: 20rem;">
+                        <div class="card-body" (click)="checkAnswer(currentQuestion.questionId, answer, i)">
                             {{answer}}
                         </div>
                     </div>
                 </div>
-            </ng-container>
+            </div>
+
         </div>
     </div>
